# debtmap

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml
.github/ISSUE_TEMPLATE/: analyzer_proposal.yml  bug_report.yml
.github/workflows/: ci.yml
backend/: pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: __init__.py  config.py
backend/app/analysis/: action_plan.py  provenance.py  repo_loader.py  runner.py  scoring.py
backend/app/analyzers/: __init__.py  _ast_utils.py  _scaffold.py  architectural_contracts.py  base.py  code_churn.py  comment_patterns.py  dependency_graph.py  duplication.py  error_handling.py  style_homogeneity.py  test_coverage.py
backend/app/api/: main.py  schemas.py
backend/app/models/: db.py
backend/app/services/: badge.py  celery_app.py  deep_scan.py  tasks.py  tokens.py
backend/scripts/: calibrate.py
backend/tests/: conftest.py  test_api_endpoints.py  test_api_smoke.py  test_architectural_contracts.py  test_code_churn.py  test_comment_patterns.py  test_deep_scan.py  test_dependency_graph.py  test_duplication.py  test_error_handling.py  test_provenance.py  test_scoring.py  test_style_homogeneity.py  test_test_coverage.py
docker/: api.Dockerfile  frontend.Dockerfile  worker.Dockerfile
frontend/: next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: ActionCards.tsx  (+7 more)
integrations/mcp-server/: README.md  debtmap_mcp.py
(+7 files in other folders)
